1)修改启动文件位置(ELK)2)添加三个es插件文件(E)3)基础镜像位置(ELK)4)配置文件修改(EL).并使之可以用Jenkins自动生成镜像